force-app/main/default/objects/Logs__b/Logs__b.object-meta.xml
<CustomObject>
    <label>Logs</label>
    <pluralLabel>Logs</pluralLabel>
</CustomObject>