force-app/main/default/objects/Logs__b/fields/Viewed_At__c.field-meta.xml
<CustomField>
    <fullName>Viewed_At__c</fullName>
    <label>Viewed At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>