force-app/main/default/objects/Logs__b/fields/Viewed_By__c.field-meta.xml
<CustomField>
    <fullName>Viewed_By__c</fullName>
    <label>Viewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>