force-app/main/default/objects/Logs__b/fields/Viewed_Contact__c.field-meta.xml
<CustomField>
    <fullName>Viewed_Contact__c</fullName>
    <label>Viewed Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>