force-app/main/default/objects/Logs__b/fields/What_Viewed__c.field-meta.xml
<CustomField>
    <fullName>What_Viewed__c</fullName>
    <label>What Viewed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>